# floability-cli

./: .gitignore  README.md  cleanup.py  data_handler.py  environment.py  environment.yml  floability-cli.py  jupyter_runner.py  provision.py  pyproject.toml  resource_provisioner.py  setup.py  utils.py
conda-recipe/: meta.yaml
docs/: backpack.md
example/cms-physics-coffea/: README.md  cms-physics-coffea.py
example/cms-physics-coffea/compute/: compute.yml
example/cms-physics-coffea/data/: data.yml  small_data.root
example/cms-physics-coffea/workflow/: cms-physics-coffea.ipynb
example/cms-physics-dv5/: README.md  cms-physics-dv5-env.yml
example/cms-physics-dv5/data/: data.yml
example/cms-physics-dv5/workflow/: cms-physics-dv5.ipynb  mdv5-mini-org.py
example/coffea_nanoevents/: coffea_env.yml  coffea_example.ipynb  coffea_example.py
example/iguide-gis-aging-dams/: Local_Analysis_Multi_Scenario.ipynb  README.md  agingdams-env.yml
example/iguide-gis-aging-dams/data/: data.yml
example/iguide-gis-aging-dams/software/: environment.yml
example/iguide-gis-aging-dams/workflow/: iguide-gis-aging-dams.ipynb
example/makeflow-jx/: data.yml  environment.yml  workflow.jx
example/matrix-multiplication/: README.md  matrix-env.yml  matrix-taskvine.ipynb  matrix-taskvine.py
example/mdv5/: README.md  mdv5-mini-org.py  mdv5-mini.ipynb
example/strace/: strace_attach.py
facilities/: nautilus.md
floability/: __init__.py  __main__.py  cli.py  data_handler.py  environment.py  file_operations.py  jupyter_runner.py  resource_provisioner.py
(+10 files in other folders)
